# advent-of-code

2025/: Cargo.toml  justfile
2025/daily-template/: Cargo.toml
2025/daily-template/src/: part1.rs  part2.rs
2025/day-01/: Cargo.toml
2025/day-01/src/: part1.rs  part2.rs
2025/day-02/: Cargo.toml
2025/day-02/src/: part1.rs  part2.rs
2025/day-03/: Cargo.toml
2025/day-03/src/: part1.rs  part2.rs
2025/day-04/: Cargo.toml
2025/day-04/src/: part1.rs  part2.rs
2025/day-05/: Cargo.toml
2025/day-05/src/: part1.rs  part2.rs
2025/scripts/: get-aoc-input.rs
